FrontPage es index y mejora de las promociones

--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -140,36 +140,77 @@
     </div>
   </div>
 
-  <div class="container-fluid parallax" id="promo" style="height: 4000px;">
+  <div class="container-fluid parallax" id="promo" style="height: 1000px;">
     <div class="row">
-      <div id=promos class="col-md-10 col-md-offset-1 mainMenu">
+      <div class="col-md-10 col-md-offset-1 mainMenu">
         <h1 class="centerText">Promociones</h1>
-        <!-- JS retrieveDeals() -->
+        <div class="row menuOptions">
+          <div class="col-md-4">
+            <div class="thumbnail" id="promo1">
+              <a href="./images/city.jpg" target="_blank">
+                <img src="./images/city.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p></p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail" id="promo2">
+              <a href="./images/city.jpg" target="_blank">
+                <img src="./images/city.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p></p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail" id="promo3">
+              <a href="./images/city.jpg" target="_blank">
+                <img src="./images/city.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p></p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="thumbnail" id="promo4">
+              <a href="./images/city.jpg" target="_blank">
+                <img src="./images/city.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p></p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail" id="promo5">
+              <a href="./images/city.jpg" target="_blank">
+                <img src="./images/city.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p></p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail" id="promo6">
+              <a href="./images/city.jpg" target="_blank">
+                <img src="./images/city.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                 <p></p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div> 
   </div>
 
   </body>
 </html>
-
-    <!--
-    <div class="col-md-1 input-group">
-      <input type="text" id="adultCount" class="form-control input-number" value="0">
-      <div class="input-group-btn-vertical">
-        <button class="btn btn-default" type="button" id="spinUp" data-target="adultCount"></button>
-        <button class="btn btn-default" type="button" id="spinDown" data-target="adultCount"></button>
-      </div>
-    </div>
-
-    <div class="col-md-1">
-      <h5>Ninos:</h5>
-    </div>
-    <div class="col-md-1 input-group">
-      <input type="text" id="childCount" class="form-control input-number" value="0">
-      <div class="input-group-btn-vertical">
-        <button class="btn btn-default btn-xs" type="button" id="spinUp" data-target="childCount">
-          <small></small><span class="glyphicon glyphicon-chevron-up"></span></small>
-        </button>
-        <button class="btn btn-default" type="button" id="spinDown" data-target="childCount"></button>
-      </div>
-    </div>-->
