Agregado de funcionalidad para ida y vuelta

--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/myjs.js"></script>
+    <script type="text/javascript" src="js/front.js"></script>
     <script type="text/javascript" src="js/infoPage.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -29,7 +29,7 @@
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-left smoothScroll" href="FrontPage.html">
+            <a class="navbar-left smoothScroll" href="index.html">
               <img src="./flyhigh.jpg" height="50" class="d-inline-block align-top">
             </a>
           </div>
