--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-left smoothScroll" href="FrontPage.html">
+          <a class="navbar-left smoothScroll" href="index.html">
             <img src="./flyhigh.jpg" height="50" class="d-inline-block align-top">
           </a>
         </div>
@@ -95,8 +95,8 @@
 
         <div class="col-md-9">
           <div class="row">
-            <div class="col-md-5 col-md-offset-1 mainMenu">
-              <div class="row">
+            <div class="col-md-5 col-md-offset-1 chooseSort">
+              <div class="row mainMenu">
                 <div class="col-md-5">
                     <p>Ordenar por:</p>
                 </div>
