--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -16,7 +16,7 @@
     <script src="awesomplete-gh-pages/awesomplete.js" async></script>
     <!--<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/myjs.js"></script>
+    <script type="text/javascript" src="js/front.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
