Agregado bootstrap datepickers

--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -76,6 +76,9 @@
                     <div class="col-md-3">
                       <input type="date" class="form-control" id="birthDateInput" placeHolder="DD/MM/AAA">
                     </div>
+                    <div class="col-md-4">
+                      <input class="form-control myInputs" type="text" id="birthDateInput" placeholder="mm/dd/yyyy" >
+                    </div>
                 </div>
                 <div class="col-md-1 col-md-offset-1"><h4>Sexo:</h4></div>
                 <label class="col-md-2 form-check-label">
