--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -116,7 +116,9 @@
             </div>            
           </div>
           <div class="row">
-            <div class="col-md-offset-1 col-md-10 flightMenu pre-scrollable" id="vuelosDiv"></div>
+            <div class="col-md-offset-1 col-md-10 flightMenu pre-scrollable" id="vuelosDiv">
+              <div class="loader"></div>
+            </div>
           </div>
           
         </div>
