--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/front.js"></script>
     <script type="text/javascript" src="js/infoPage.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -21,7 +20,6 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   </head>
 
   <body class="backgroundimage">
@@ -29,9 +27,7 @@
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-left smoothScroll" href="index.html">
-              <img src="./flyhigh.jpg" height="50" class="d-inline-block align-top">
-            </a>
+            <a class="navbar-brand" href="#">FlyHigh</a>
           </div>
         </div>
       </nav>
@@ -56,17 +52,12 @@
                 <div class="col-md-3 col-md-offset-1">
                   <input type="text" class="form-control" id="lastNameInput" placeHolder="Apellido">
                 </div>
-
-                <div class="input-group-btn col-md-1 col-md-offset-1">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="documentDropDown">- <span class="caret"></span></button>
-                    <ul class="dropdown-menu">
-                      <li><a href="#" id="dni">DNI</a></li>
-                      <li><a href="#" id="passport">Pasaporte</a></li>
-                    </ul>
-                  </div>
-                <div class="col-md-4 col-md-offset-1">
+                <div id="dropDownDiv" class="col-md-1 col-md-offset-1"></div>
+                <div class="col-md-4">
                   <input type="text" class="form-control" id="documentInput" placeHolder="Documento">
                 </div>
+              </div>
+                
               </div>
               <div class="row menuOptions form-group">
                 <div class="form-group">
@@ -85,14 +76,7 @@
                   <input class="form-check-input" type="radio" name="maleFemale" id="female" value="option0"> Mujer
                 </label>
               </div>
-              <div class="row menuOptions form-group" id="buttonsRow" style="display:none">
-                <div class="col-md-1">
-                  <button type="button" class="btn btn-primary" id="backButton">Volver</button>
-                </div>
-                <div class="col-md-1 col-md-offset-9">
-                  <button type="button" class="btn btn-primary" id="nextButton">Ir al pago</button>
-                </div>
-              </div>
+              
             </template>
           </div>
         </div>
