Agregado una vista de los vuelos arriba de information y payment page. Agregado validacion de los datos de InfoPage. Agregado un .js con las funciones de validacion usadas. Agregado funcionalidad a los botones de comprar en ChoosePage

--- a/bootstrap-3.3.7-dist/CheckPage.html
+++ b/bootstrap-3.3.7-dist/CheckPage.html
@@ -31,7 +31,9 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand smoothScroll" href="#main">FlyHigh</a>
+          <a class="navbar-left smoothScroll" href="index.html">
+            <img src="./flyhigh.jpg" height="50" class="d-inline-block align-top">
+          </a>
         </div>
       </div>
     </nav>
@@ -50,7 +52,7 @@
                     <div class="col-md-2">Fecha de nacimiento: </div>
                     <div class="col-md-2" id="birthDate"></div>
                   </div>
-       
+
               </template>
           </div>
 
