--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -40,7 +40,7 @@
           <div class="col-md-10 col-md-offset-1 flightMenu">
             <div class="centerText" id="title"><h4>Ida</h4></div>
             <div class="col-md-12" id="vuelosDivIda"></div>
-            <div class="centerText" id="title"><h4>Vuelta</h4></div>
+            <div class="centerText" id="titleVuelta"></div>
             <div class="col-md-12 " id="vuelosDivVuelta"></div>
           </div>
         </div>
