--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -23,7 +23,7 @@
     <![endif]-->
   </head>
 
-  <body class="backgroundimage">
+  <body class="backgroundimage parallax">
     <!-- Barra superior -->
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -72,6 +72,7 @@
               </div>
 
               </div>
+              
               <div class="row menuOptions form-group">
                 <div class="form-group">
                   <div class="col-md-2 col-from-label" for="birthDateInput">
