--- a/bootstrap-3.3.7-dist/PaymentPage.html
+++ b/bootstrap-3.3.7-dist/PaymentPage.html
@@ -41,11 +41,9 @@
 
     <div class="container-fluid">
       <div class="row" style="margin-top:10%;">
-        <div class="col-md-10 col-md-offset-1 flightMenu">
+        <div class="col-md-10 col-md-offset-1 flightMenu" id="ticketShowcase">
           <div class="centerText" id="title"><h4>Ida</h4></div>
           <div class="col-md-12" id="vuelosDivIda"></div>
-          <div class="centerText" id="titleVuelta"><h4>Vuelta</h4></div>
-          <div class="col-md-12 " id="vuelosDivVuelta"></div>
         </div>
       </div>
       <div class="row" id="main">
