Cambio de ticket

--- a/bootstrap-3.3.7-dist/FlightsTemplate.html
+++ b/bootstrap-3.3.7-dist/FlightsTemplate.html
@@ -1,5 +1,67 @@
 <div class="flightStyle">
   <div class="row">
+    <div class="col-md-1 tempFli1">
+      <div class="fechaSale">
+        <div></div>
+      </div>
+    </div>
+    <div class="col-md-3 tempFli1 tempFli2">
+      <div class="oriID">
+        <p></p>
+      </div>
+      <div class="ori">
+        <p></p>
+      </div>
+      <div class="oriHora">
+        <p></p>
+      </div>
+    </div>
+    <div class="col-md-1 tempFli1">
+      <span class="glyphicon glyphicon-arrow-right"></span>
+    </div>
+    <div class="col-md-3 tempFli1 ">
+      <div class="desID">
+        <p></p>
+      </div>
+      <div class="des">
+        <p></p>
+      </div>
+      <div class="desHora">
+        <p></p>
+      </div>
+    </div>
+    <div class="col-md-2 tempFli1">
+      <div class="duration">
+        <span class="glyphicon glyphicon-time"></span> 
+      </div>
+      <div class="fliNum">
+        <p></p>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="price">
+        <p></p>
+      </div>
+      <div class="detalle">
+        <div class="dropdown">
+          <p>+ detalle</p>
+          <div class="dropdown-content">
+            <p class="pAdulto"></p>
+            <p class="pNino"></p>
+            <p class="pCargo"></p>
+            <p class="pImpuestos"></p>
+          </div>
+        </div>
+      </div>
+      <div class="buy">
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="flightStyle">
+  <div class="row">
     <img class="col-md-1 airportLogo" src="" alt="Airport logo" width="42" height="42"></img>
     <div class="col-md-8">
       <div class="row">
@@ -17,4 +79,4 @@
       </div>
     </div>
   </div>
-</div>  
+</div>   -->
