--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -23,7 +23,7 @@
     <![endif]-->
   </head>
 
-  <body class="backgroundimage parallax">
+  <body class="backgroundimage">
     <!-- Barra superior -->
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -37,9 +37,11 @@
 
       <div class="container-fluid ">
         <div class="row" style="margin-top:10%;">
-          <div class="col-md-10 col-md-offset-1 flightMenu" id="ticketShowcase">
+          <div class="col-md-10 col-md-offset-1 flightMenu">
             <div class="centerText" id="title"><h4>Ida</h4></div>
             <div class="col-md-12" id="vuelosDivIda"></div>
+            <div class="centerText" id="titleVuelta"></div>
+            <div class="col-md-12 " id="vuelosDivVuelta"></div>
           </div>
         </div>
 
@@ -70,7 +72,6 @@
               </div>
 
               </div>
-              
               <div class="row menuOptions form-group">
                 <div class="form-group">
                   <div class="col-md-2 col-from-label" for="birthDateInput">
