--- a/bootstrap-3.3.7-dist/CheckPage.html
+++ b/bootstrap-3.3.7-dist/CheckPage.html
@@ -26,7 +26,7 @@
     <![endif]-->
   </head>
 
-  <body class="backgroundimage parallax">
+  <body class="backgroundimage">
   <!-- Barra superior -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -52,6 +52,7 @@
                     <div class="col-md-2">Fecha de nacimiento: </div>
                     <div class="col-md-2" id="birthDate"></div>
                   </div>
+
               </template>
           </div>
 
