--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -156,62 +156,51 @@
         <h1 class="centerText">Promociones</h1>
         <div class="row menuOptions">
           <div class="col-md-4">
-            <div class="thumbnail" id="promo1">
-              <a href="./images/city.jpg" target="_blank">
+            <div class="thumbnail" id="promo1" data-num="1">
                 <img src="./images/city.jpg" alt="Lights" style="width:100%">
                 <div class="caption">
                   <p></p>
                 </div>
-              </a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="loader"></div>
-            <div class="thumbnail" id="promo2">
-              <a href="./images/city.jpg" target="_blank">
+            <div class="thumbnail" id="promo2" data-num="2">
                 <img src="./images/city.jpg" alt="Lights" style="width:100%">
                 <div class="caption">
                   <p></p>
                 </div>
-              </a>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="thumbnail" id="promo3">
-              <a href="./images/city.jpg" target="_blank">
+            <div class="thumbnail" id="promo3" data-num="3">
                 <img src="./images/city.jpg" alt="Lights" style="width:100%">
                 <div class="caption">
                   <p></p>
                 </div>
-              </a>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4">
-            <div class="thumbnail" id="promo4">
-              <a href="./images/city.jpg" target="_blank">
+            <div class="thumbnail" id="promo4" data-num="4">
                 <img src="./images/city.jpg" alt="Lights" style="width:100%">
                 <div class="caption">
                   <p></p>
                 </div>
-              </a>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="thumbnail" id="promo5">
-              <a href="./images/city.jpg" target="_blank">
+            <div class="thumbnail" id="promo5" data-num="5">
                 <img src="./images/city.jpg" alt="Lights" style="width:100%">
                 <div class="caption">
                   <p></p>
                 </div>
-              </a>
             </div>
           </div>
           <div class="col-md-4">
-            <a href="#myModal" data-toggle="modal" data-target="#myModal" data-num="6"/>
-            <div class="thumbnail" id="promo6">
-              
+            <!-- <a href="#myModal" data-toggle="modal" data-target="#myModal" data-num="6"/> -->
+            <div class="thumbnail" id="promo6" data-num="6">              
                 <img src="./images/city.jpg" alt="Lights" style="width:100%"></img>
                 <div class="caption">
                  <p></p>
@@ -223,10 +212,6 @@
     </div> 
   </div>
 
-  <h2>Modal Example</h2>
-  <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
-
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
@@ -234,8 +219,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+          <h4 class="modal-title centerText"><p></p></h4>
         </div>
         <div class="modal-body">
           <div class="container-fluid">
@@ -270,6 +254,11 @@
                     <button id="ninosCountPDown" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-bottom"></i></button>
                   </div>
                 </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-2 col-md-offset-5">
+                <button class="btn btn-primary compraPromo">Comprar</button>
               </div>
             </div>
           </div>
