Adaptado infopage (paymentpage todavia no) a los nuevos tickets. Solucionados bugs del validator. Agregado el fondo denuevo. Infinitos cambios, paja escribir todo

--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -23,7 +23,7 @@
     <![endif]-->
   </head>
 
-  <body class="backgroundimage">
+  <body class="backgroundimage parallax">
     <!-- Barra superior -->
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
