--- a/bootstrap-3.3.7-dist/CheckPage.html
+++ b/bootstrap-3.3.7-dist/CheckPage.html
@@ -26,7 +26,7 @@
     <![endif]-->
   </head>
 
-  <body class="backgroundimage">
+  <body class="backgroundimage parallax">
   <!-- Barra superior -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
