Hecho que funcionenn los botones de vuelta y los pasajes se muestren bien en paymentpage

--- a/bootstrap-3.3.7-dist/PaymentPage.html
+++ b/bootstrap-3.3.7-dist/PaymentPage.html
@@ -124,8 +124,8 @@
           <div class="menuOptions row">
             <div class="centerText form-group"> <h4> Informacion de cobro </h4> </div>
             <div class="menuOptions row">
-              <div class="col-md-offset-1 col-md-1">Nombre</div>
-              <div class="col-md-offset-4 col-md-2">DNI del titular</div>
+              <div class="col-md-offset-1 col-md-3">Nombre y apellido</div>
+              <div class="col-md-offset-2 col-md-3">DNI del titular</div>
             </div>
             <div class="row form-group">
               <div class="col-md-3 col-md-offset-1">
