--- a/bootstrap-3.3.7-dist/CheckPage.html
+++ b/bootstrap-3.3.7-dist/CheckPage.html
@@ -42,14 +42,14 @@
       <div class="row" id="main">
         <div class="col-md-6 col-md-offset-3 mainMenu" >
           <div class="centerText"> <h4> Datos de los pasajeros </h4> </div>
-          <div class="row menuOptions" id="personsDiv">
+          <div class="row formTopMargin" id="personsDiv">
               <template id="personTemplate">
                   <div class="centerText" id="title"><h4></h4></div>
-                  <div class="row menuOptions form-group">
+                  <div class="row formTopMargin form-group">
                     <div class="col-md-1 col-from-label">Nombre: </div>
                     <div class="col-md-3" id="name"></div>
                     <div class="col-md-3" id="document"></div>
-                    <div class="col-md-2">Fecha de nacimiento: </div>
+                    <div class="col-md-3">Fecha de nacimiento: </div>
                     <div class="col-md-2" id="birthDate"></div>
                   </div>
 
@@ -57,37 +57,46 @@
           </div>
 
           <div class="centerText"> <h4> Datos del pago </h4> </div>
-
-          <div class="row menuOptions">
-            <div class="col-md-3 col-md-offset-1">Tarjeta:</div>
+          <div class="row formTopMargin">
+            <div class="col-md-3 col-md-offset-1" >Tarjeta:</div>
             <div class="col-md-6 col-md-offset-2">Fecha de expiracion y codigo de seguridad:</div>
           </div>
-
-          <div class="row">
-            <div class="col-md-3 col-md-offset-1" id="cardNumber"></div>
-            <div class="col-md-5 col-md-offset-2" id="expiryDateAndCVV"></div>
+          <div class="row formTopMargin">
+            <div class="col-md-4 col-md-offset-1" id="cardNumber"></div>
+            <div class="col-md-5 col-md-offset-1" id="expiryDateAndCVV"></div>
           </div>
           <div class="menuOptions row">
             <div class="centerText form-group"> <h4> Informacion de cobro </h4> </div>
-            <div class="menuOptions row">
-              <div class="col-md-offset-1 col-md-1">Nombre:</div>
-              <div class="col-md-2" id="cardOwnerName"></div>
-              <div class="col-md-offset-3 col-md-2">Ciudad:</div>
-              <div class="col-md-3" id="cardOwnerCity"></div>
+            <div class="row">
+              <div class="col-md-3 centerText">Nombre y apellido:</div>
+              <div class="col-md-3" id="cardOwnerName"></div>
+              <div class="col-md-3 centerText">DNI del titular:</div>
+              <div class="col-md-3" id="cardOwnerID"></div>
             </div>
             <div class="row">
-              <div class="col-md-offset-1 col-md-1">Direccion: </div>
-              <div class="col-md-2" id="cardOwnerAddress"></div>
-              <div class="col-md-offset-3 col-md-2">Codigo postal: </div>
+              <div class="col-md-3 centerText">Pais: </div>
+              <div class="col-md-3" id="cardOwnerCountry"></div>
+              <div class="col-md-3 centerText">Provincia: </div>
+              <div class="col-md-3" id="cardOwnerProvince"></div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 centerText">Ciudad:</div>
+              <div class="col-md-3" id="cardOwnerCity"></div>
+              <div class="col-md-3 centerText">Codigo postal: </div>
               <div class="col-md-3" id="cardOwnerPostalCode"></div>
             </div>
-
             <div class="row">
-              <div class="col-md-offset-1 col-md-1">Pais: </div>
-              <div class="col-md-2" id="cardOwnerCountry"></div>
-              <div class="col-md-offset-3 col-md-3">Numero de telefono: </div>
+              <div class="col-md-3 centerText">Direccion: </div>
+              <div class="col-md-3" id="cardOwnerAddress"></div>
+            </div>
+            <div class="centerText form-group"> <h4> Informacion de contacto </h4> </div>
+            <div class="row">
+              <div class="col-md-3 centerText">Mail: </div>
+              <div class="col-md-3" id="cardOwnerMail"></div>
+              <div class="col-md-3 centerText">Numero de telefono: </div>
               <div class="col-md-3" id="cardOwnerPhone"></div>
             </div>
+
             <div class="row menuOptions form-group">
               <div class="col-md-1 ">
                 <button type="button" class="btn btn-primary myInputs" id="backButton">Volver</button>
