Agregado validacion de la tarjeta de credito

--- a/bootstrap-3.3.7-dist/PaymentPage.html
+++ b/bootstrap-3.3.7-dist/PaymentPage.html
@@ -61,6 +61,8 @@
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" id="cardTypeDropDown">
+                  <li><a href="#" data-value="visa" id="amex">American Express</a></li>
+                  <li><a href="#" data-value="visa" id="diners">Diners</a></li>
                   <li><a href="#" data-value="visa" id="visa">VISA</a></li>
                   <li><a href="#" data-value="mastercard" id="mastercard">Mastercard</a></li>
                 </ul>
