Agregada defensa contra no JS y timeout, correccion de aeropuertos

--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -45,10 +45,10 @@
     </nav>
 
   <!-- Menu con opcion e imagen de fondo -->
-  <div class="parallax container-fluid">
+  <div class="parallax container-fluid jsCheck">    
     <div class="row" id="main">
       <div class="col-md-8 col-md-offset-2 mainMenu" >
-        <div class="centerText"> <h4> Elegí tu vuelo </h4> </div>
+        <div class="centerText jsCheck"> <h4> Elegí tu vuelo </h4> </div>
         <div class="form-group row menuOptions">
           <label class="col-md-1 col-form-label" for="origenInput">
             <h5>Origen:</h5>
@@ -104,7 +104,7 @@
           </div>
           <div class="col-md-2">
             <h5 align="right">Ninos:</h5>
-            <h5 align="right">Infantes:</h5>
+            <!-- <h5 align="right">Infantes:</h5> -->
           </div>
           <div class="col-md-2 row">
             <div class="input-group spinner">
@@ -114,13 +114,13 @@
                 <button id="ninosCountDown" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-bottom"></i></button>
               </div>
             </div>
-            <div class="input-group spinner">
+            <!-- <div class="input-group spinner">
               <input type="text" id="infaCount" class="form-control psgrCount" value="0" min="0" max="10">
               <div class="input-group-btn-vertical">
                 <button id="infaCountUp" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-top"></i></button>
                 <button id="infaCountDown" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-bottom"></i></button>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-md-1 col-md-offset-10 menuOptions">
@@ -143,14 +143,14 @@
     </div>
   </div>
 
-  <div class="container-fluid" >
+  <!-- <div class="container-fluid" >
     <div class="jumbotron jumbotron-fluid" >
       <h1 style="text-align: center;">Aguante FlyHigh</h1>
       <p style="text-align: justify;">>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac magna vulputate, commodo diam vitae, rutrum justo. Etiam sed ligula leo. Donec ultricies quam eget euismod dictum. Cras hendrerit felis id elit blandit fermentum. Mauris ut est dolor. Cras malesuada metus lacus, id ultrices velit sodales at. Fusce ut dapibus turpis. Sed sed ultricies lectus, non eleifend enim. Aenean dui dui, lobortis vel bibendum et, luctus sed libero. Suspendisse rutrum lectus quis justo cursus, eget finibus justo porta. Donec iaculis nisl nulla, at volutpat ex facilisis ut. Sed luctus ut orci dictum fermentum. Vestibulum facilisis aliquam tortor, vel faucibus metus varius vel. Curabitur odio nisl, pellentesque interdum dignissim id, auctor vel sem.</p>
     </div>
-  </div>
+  </div> -->
 
-  <div class="container-fluid parallax" id="promo" style="height: 1000px;">
+  <div class="container-fluid parallax jsCheck" id="promo" style="height: 1000px;">
     <div class="row">
       <div class="col-md-10 col-md-offset-1 mainMenu">
         <h1 class="centerText">Promociones</h1>
@@ -271,6 +271,9 @@
     </div>
   </div>
 
+  <div id="jsHabil" style="margin-top: 10%; text-align: center;">
+    <h1>Habilite JavasCript para poder utilizar la página correctamente.</h1>
+  </div>
 
   </body>
 </html>
