Funcionan los filtros y mejora del ticket

--- a/bootstrap-3.3.7-dist/FlightsTemplate.html
+++ b/bootstrap-3.3.7-dist/FlightsTemplate.html
@@ -15,6 +15,9 @@
       <div class="oriHora">
         <p></p>
       </div>
+      <div class="oriFecha">
+        <p></p>
+      </div>
     </div>
     <div class="col-md-1 tempFli1">
       <span class="glyphicon glyphicon-arrow-right"></span>
@@ -29,12 +32,18 @@
       <div class="desHora">
         <p></p>
       </div>
+      <div class="desFecha">
+        <p></p>
+      </div>
     </div>
     <div class="col-md-2 tempFli1">
       <div class="duration">
         <span class="glyphicon glyphicon-time"></span> 
       </div>
       <div class="fliNum">
+        <p></p>
+      </div>      
+      <div class="aeroName">
         <p></p>
       </div>
     </div>
