--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -44,10 +44,6 @@
           <div class="form-group centerText">
             <h4>Filtros</h4> 
           </div>
-          <div class="form-group centerText filterMenu">
-            <h4>Aerolineas</h4>
-              <!-- aca poner algo que agarre las aerolineas disponibles -->
-          </div>
           <div class="row form-group filterMenu">
             <div class="centerText">
               <h4>Precio</h4>
@@ -72,23 +68,15 @@
                 <input type="text" class="form-control" id="maxPrice">
               </div>
             </div>
-            <div class="row">
-              <label class="col-md-5 col-md-offset-1 form-check-label">
-                <input class="form-check-input" type="radio" name="currencyType" id="usd" value="option0" checked=""> USD
-              </label>
-              <label class="col-md-5 form-check-label">
-                <input class="form-check-input" type="radio" name="currencyType" id="ars" value="option0"> ARS
-              </label>
-            </div>
-          </div>
-          <div class="row form-group">
-            <div class="col-md-4">
-              <button type="button" class="btn btn-primary" id="clearFilters">Limpiar filtros</button>
-            </div>
           </div>
           <div class="row form-group">
             <div class="col-md-4">
               <button type="button" class="btn btn-primary" id="applyFilters">Filtrar</button>
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-md-4">              
+              <button type="button" class="btn btn-primary" id="clearFilters">Limpiar filtros</button>
             </div>
           </div>
         </div>
@@ -118,6 +106,7 @@
           <div class="row">
             <div class="col-md-offset-1 col-md-10 flightMenu pre-scrollable" id="vuelosDiv">
               <div class="loader"></div>
+              <div id="notFound">No Hay vuelos que coincidan con tu búsqueda :(</div>
             </div>
           </div>
           
