--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -95,7 +95,7 @@
           </div>
           <div class="col-md-2 row">
             <div class="input-group spinner">
-              <input type="text" id="adultCount" class="form-control psgrCount" value="1" min="0" max="10">
+              <input type="text" id="adultCount" class="form-control psgrCount" value="1" min="1" max="10">
               <div class="input-group-btn-vertical">
                 <button id="adultCountUp" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-top"></i></button>
                 <button id="adultCountDown" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-bottom"></i></button>
@@ -233,13 +233,13 @@
                 <h5 align="right">Adultos:</h5>
               </div>
               <div class="col-md-4">
-                <h5 align="right">Ninos:</h5>
+                <h5 align="right">Niños:</h5>
               </div>
             </div>
             <div class="row">
               <div class="col-md-4 col-md-offset-2">
                 <div class="input-group spinner">
-                  <input type="text" id="adultCountP" class="form-control psgrCount" value="1" min="0" max="10">
+                  <input type="text" id="adultCountP" class="form-control psgrCountP" value="1" min="1" max="10">
                   <div class="input-group-btn-vertical">
                     <button id="adultCountPUp" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-top"></i></button>
                     <button id="adultCountPDown" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-bottom"></i></button>
@@ -248,7 +248,7 @@
               </div>
               <div class="col-md-4">
                 <div class="input-group spinner">
-                  <input type="text" id="ninosCountP" class="form-control psgrCount" value="0" min="0" max="10">
+                  <input type="text" id="ninosCountP" class="form-control psgrCountP" value="0" min="0" max="10">
                   <div class="input-group-btn-vertical">
                     <button id="ninosCountPUp" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-top"></i></button>
                     <button id="ninosCountPDown" class="btn btn-default psgrCount" type="button"><i class="glyphicon glyphicon-triangle-bottom"></i></button>
